# cutecosmic

./: .gitignore  CMakeLists.txt  README.md  flake.nix  shell.nix
.github/workflows/: build.yml
nix/: package.nix
platformtheme/: CMakeLists.txt
